fix icons overflow and center text

--- a/src/app/features/calculator/mortgage-calculator/mortgage-calculator.component.scss
+++ b/src/app/features/calculator/mortgage-calculator/mortgage-calculator.component.scss
@@ -39,6 +39,7 @@
 
       .result-text {
         font-size: 12px;
+        text-align: center;
       }
     }
   }
