--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,4 +116,5 @@ select {
   width: 16px !important;
   height: 16px !important;
   color: gray;
+  overflow: unset !important;
 }
